--- a/index.html
+++ b/index.html
@@ -3,258 +3,222 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Todo List App</title>
+<title>Todo App with Dark Mode & Persistence</title>
 <style>
-  body {
-    margin: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    min-height: 100vh;
-    padding: 2rem;
-    box-sizing: border-box;
+  :root {
+    --bg-color: #ffffff;
+    --text-color: #000000;
+    --button-bg: #e0e0e0;
+    --button-text: #000;
+    --task-bg: #f9f9f9;
   }
 
-  .container {
-    background: #fff;
-    border-radius: 10px;
-    max-width: 500px;
-    width: 100%;
-    padding: 2rem;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  body.dark-mode {
+    --bg-color: #121212;
+    --text-color: #f0f0f0;
+    --button-bg: #333;
+    --button-text: #f0f0f0;
+    --task-bg: #2c2c2c;
+  }
+
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  header {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+    background-color: var(--button-bg);
+    transition: background-color 0.3s;
   }
 
   h1 {
-    margin: 0 0 1rem 0;
-    text-align: center;
-    color: #4b0082;
-    font-size: 2rem;
+    margin: 0;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 0.5em;
+  }
+
+  button {
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 4px;
+    background-color: var(--button-bg);
+    color: var(--button-text);
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.2s;
+  }
+
+  button:hover {
+    background-color: #999;
+  }
+
+  main {
+    padding: 1em;
   }
 
   form {
     display: flex;
-    gap: 0.5rem;
-    margin-bottom: 1rem;
+    gap: 0.5em;
+    margin-bottom: 1em;
   }
 
   input[type="text"] {
     flex: 1;
-    padding: 0.75rem;
+    padding: 0.5em;
+    font-size: 1em;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1rem;
-    transition: border-color 0.3s;
+    border-radius: 4px;
   }
 
-  input[type="text"]:focus {
-    border-color: #6a11cb;
-    outline: none;
-  }
-
-  button {
-    padding: 0.75rem 1.2rem;
-    border: none;
-    border-radius: 5px;
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
-    color: #fff;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background 0.3s, transform 0.2s;
-  }
-
-  button:hover {
-    background: linear-gradient(135deg, #5a0fbf, #1f63d1);
-    transform: translateY(-2px);
-  }
-
-  .task-list {
+  ul {
     list-style: none;
     padding: 0;
     margin: 0;
   }
 
-  .task {
+  li {
+    background-color: var(--task-bg);
+    margin-bottom: 0.5em;
+    padding: 0.75em;
+    border-radius: 4px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background: #f9f9f9;
-    border-radius: 8px;
-    padding: 0.75rem;
-    margin-bottom: 0.75rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    transition: background 0.3s, transform 0.2s;
-  }
-
-  .task:hover {
-    background: #eee;
-    transform: translateY(-1px);
-  }
-
-  .task-info {
-    display: flex;
     align-items: center;
-    gap: 0.75rem;
-    flex-wrap: wrap;
-    flex: 1;
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
   }
 
-  input[type="checkbox"] {
-    transform: scale(1.2);
-    cursor: pointer;
-  }
-
-  .task-text {
-    font-size: 1rem;
-    flex: 1;
-    word-break: break-word;
-  }
-
-  .task-text.completed {
+  li.completed {
     text-decoration: line-through;
-    color: #888;
+    opacity: 0.6;
   }
 
-  .delete-btn {
-    background: transparent;
+  li button {
+    background-color: transparent;
     border: none;
-    color: #c00;
-    font-size: 1.2rem;
+    font-size: 1.2em;
+    color: var(--text-color);
     cursor: pointer;
-    transition: color 0.3s, transform 0.2s;
+    padding: 0 0.5em;
   }
 
-  .delete-btn:hover {
-    color: #f00;
-    transform: scale(1.2);
-  }
-
-  .task-count {
-    margin-top: 1rem;
-    text-align: center;
-    font-size: 1rem;
-    color: #333;
-  }
-
-  /* Responsive adjustments */
-  @media (max-width: 600px) {
-    .container {
-      padding: 1.5rem;
-    }
-
-    h1 {
-      font-size: 1.5rem;
-    }
-
-    input[type="text"] {
-      font-size: 0.9rem;
-    }
-
-    button {
-      font-size: 0.9rem;
-    }
-
-    .task-text {
-      font-size: 0.9rem;
-    }
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-10px); }
+    to { opacity: 1; transform: translateY(0); }
   }
 </style>
 </head>
 <body>
-<div class="container">
-  <h1>My Todo List</h1>
-  <form id="todo-form">
-    <input type="text" id="task-input" placeholder="Add a new task..." required />
+<header>
+  <h1>Todo List</h1>
+  <div class="buttons">
+    <button id="darkModeToggle">Dark Mode</button>
+    <button id="clearAll">Clear All</button>
+  </div>
+</header>
+<main>
+  <form id="todoForm">
+    <input type="text" id="taskInput" placeholder="Add a new task" required />
     <button type="submit">Add</button>
   </form>
-  <ul class="task-list" id="task-list"></ul>
-  <div class="task-count" id="task-count">0 tasks remaining</div>
-</div>
+  <ul id="taskList"></ul>
+</main>
 <script>
-  const form = document.getElementById('todo-form');
-  const input = document.getElementById('task-input');
-  const taskList = document.getElementById('task-list');
-  const taskCountEl = document.getElementById('task-count');
+  const darkModeToggle = document.getElementById('darkModeToggle');
+  const clearAllBtn = document.getElementById('clearAll');
+  const taskForm = document.getElementById('todoForm');
+  const taskInput = document.getElementById('taskInput');
+  const taskList = document.getElementById('taskList');
 
   let tasks = [];
 
-  function updateCount() {
-    const remaining = tasks.filter(t => !t.completed).length;
-    taskCountEl.textContent = `${remaining} task${remaining !== 1 ? 's' : ''} remaining`;
+  // Load tasks from local storage
+  window.onload = () => {
+    const storedTasks = localStorage.getItem('tasks');
+    if (storedTasks) {
+      tasks = JSON.parse(storedTasks);
+      tasks.forEach(task => addTaskToDOM(task));
+    }
+    updateDarkModeButton();
+  };
+
+  // Save tasks to local storage
+  function saveTasks() {
+    localStorage.setItem('tasks', JSON.stringify(tasks));
   }
 
-  function createTaskElement(task, index) {
+  // Add task to DOM
+  function addTaskToDOM(task) {
     const li = document.createElement('li');
-    li.className = 'task';
-
-    const taskInfo = document.createElement('div');
-    taskInfo.className = 'task-info';
-
-    const checkbox = document.createElement('input');
-    checkbox.type = 'checkbox';
-    checkbox.checked = task.completed;
-    checkbox.addEventListener('change', () => {
-      tasks[index].completed = checkbox.checked;
-      updateTaskStyle(li, tasks[index]);
-      updateCount();
-    });
-
-    const span = document.createElement('span');
-    span.className = 'task-text';
-    span.textContent = task.text;
+    li.textContent = task.text;
     if (task.completed) {
-      span.classList.add('completed');
+      li.classList.add('completed');
     }
 
+    // Toggle completion
+    li.addEventListener('click', () => {
+      task.completed = !task.completed;
+      li.classList.toggle('completed');
+      saveTasks();
+    });
+
+    // Delete button
     const deleteBtn = document.createElement('button');
-    deleteBtn.className = 'delete-btn';
     deleteBtn.innerHTML = '&times;';
     deleteBtn.title = 'Delete task';
-    deleteBtn.addEventListener('click', () => {
-      tasks.splice(index, 1);
-      renderTasks();
-    });
-
-    taskInfo.appendChild(checkbox);
-    taskInfo.appendChild(span);
-    li.appendChild(taskInfo);
+    deleteBtn.onclick = (e) => {
+      e.stopPropagation();
+      taskList.removeChild(li);
+      tasks = tasks.filter(t => t !== task);
+      saveTasks();
+    };
     li.appendChild(deleteBtn);
-    return li;
+
+    taskList.appendChild(li);
   }
 
-  function updateTaskStyle(li, task) {
-    const span = li.querySelector('.task-text');
-    if (task.completed) {
-      span.classList.add('completed');
-    } else {
-      span.classList.remove('completed');
-    }
-  }
-
-  function renderTasks() {
-    taskList.innerHTML = '';
-    tasks.forEach((task, index) => {
-      const taskEl = createTaskElement(task, index);
-      taskList.appendChild(taskEl);
-    });
-    updateCount();
-  }
-
-  form.addEventListener('submit', (e) => {
+  // Handle form submission
+  taskForm.onsubmit = (e) => {
     e.preventDefault();
-    const text = input.value.trim();
-    if (text !== '') {
-      tasks.push({ text, completed: false });
-      input.value = '';
-      renderTasks();
-    }
-  });
+    const taskText = taskInput.value.trim();
+    if (taskText === '') return;
+    const task = { text: taskText, completed: false };
+    tasks.push(task);
+    addTaskToDOM(task);
+    saveTasks();
+    taskInput.value = '';
+  };
 
-  // Initial count
-  updateCount();
+  // Toggle dark mode
+  darkModeToggle.onclick = () => {
+    document.body.classList.toggle('dark-mode');
+    updateDarkModeButton();
+  };
+
+  function updateDarkModeButton() {
+    if (document.body.classList.contains('dark-mode')) {
+      darkModeToggle.textContent = 'Light Mode';
+    } else {
+      darkModeToggle.textContent = 'Dark Mode';
+    }
+  }
+
+  // Clear all tasks
+  clearAllBtn.onclick = () => {
+    taskList.innerHTML = '';
+    tasks = [];
+    saveTasks();
+  };
 </script>
 </body>
 </html>
